--- a/generator.html
+++ b/generator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <!-- ANTI-CACHE META TAGS (Forces browser to load new version) -->
+    <!-- ANTI-CACHE META TAGS -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
@@ -190,7 +190,7 @@
         // ===============================================
         
         const DB_URL = "https://gateway-260ec-default-rtdb.firebaseio.com/";
-        const PREFIX = "DP-";
+        const PREFIX = "DG-"; // CHANGED FROM DP TO DG
         
         const LOGS = document.getElementById('terminalLog');
         const keyDisplay = document.getElementById('displayedKey');
