--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 "Title": "DPMods VIP", "Subtitle": "GATEWAY V8.1 // ONLINE", "AdminUrl": "", "UpdateUrl": "",
                 "AppVersion": 1, "KeyDurationHours": 24,
                 "Api": { "BaseUrl": "", "Token": "" },
-                "Texts": { "BtnAdmin": "ADMIN SUPPORT", "BtnKey": "GET KEY", "BtnLogin": "ACTIVATE SYSTEM", "Hint": "ENTER ACCESS KEY" }
+                "Texts": { "BtnAdmin": "TUTORIAL", "BtnKey": "GET KEY", "BtnLogin": "ACTIVATE SYSTEM", "Hint": "ENTER ACCESS KEY" }
             }, 
             "BannedDevices": {}, "ActivatedUsers": {}, "ValidKeys": {} 
         };
